test/tests/compiler/17_supporting_dynamic_memory_allocation/invalid_types/void/no_return_value.plx
pub fn foo(none) i32 {
    #  function with non-void return type
    #  must return a value
    return none
}

pub fn main(none) i32 {
    foo()
    return nil
}
